# Asteroids

./: .gitignore  CMakeLists.txt  README.md  build-run-unix.sh  build-run-win-msys2.sh  plan.txt
include/: Asteroid.h  Bullet.h  Game.h  Ship.h
src/: Asteroid.cpp  Bullet.cpp  Game.cpp  Ship.cpp  main.cpp
src/include/: Asteroid.h  Game.h  Ship.h
